<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:padding="@dimen/margin_medium">

    <ImageView
        android:id="@+id/imageViewArtwork"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:contentDescription="@string/artwork_1_title"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/artwork_1_morning_pine"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_max="@dimen/image_max_height"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayoutInfo"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        android:background="@color/card_background"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewArtwork">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artwork_1_title"
            android:textSize="@dimen/text_large"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textViewArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artwork_1_artist"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_secondary"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"/>

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artwork_1_year"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_secondary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfo">

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/previous_button"
            android:textSize="@dimen/button_text_size"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_marginEnd="@dimen/margin_medium"
            android:enabled="false"
            android:padding="@dimen/zero_dp"
            android:contentDescription="@string/previous_button_desc"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/next_button"
            android:textSize="@dimen/button_text_size"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/zero_dp"
            android:contentDescription="@string/next_button_desc"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>